--- a/package.json
+++ b/package.json
@@ -23,7 +23,5 @@
   },
   "homepage": "https://github.com/skolobov/mkrel#readme",
   "devDependencies": {},
-  "dependencies": {
-    "unleash": "^2.0.2"
-  }
+  "dependencies": {}
 }
