--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "url": "https://github.com/skolobov/mkrel/issues"
   },
   "homepage": "https://github.com/skolobov/mkrel#readme",
-  "devDependencies": {},
+  "devDependencies": {
+    "standard-version": "^9.1.1"
+  },
   "dependencies": {}
 }
